# randomwebsitebot

./: Dockerfile  Makefile  README.md  TODO  docker-entrypoint.sh  pyproject.toml  requirements.txt
src/: bot.py  main.py  reddit.py  test_bot.py
src/rwb/: bot.py  reddit.py  test_bot.py
