[tool.poetry]
name = "randomwebsitebot"
version = "0.1.0"
description = "Tweet or toot random fun websites"
authors = ["Alexandru Cojocaru <hi@xojoc.pw>"]
license = "AGPL-3.0-or-later"

[tool.poetry.dependencies]
python = "^3.11"
tweepy = "^4"
requests = "^2"
beautifulsoup4 = "^4"
lxml = "^4"

[tool.poetry.dev-dependencies]
mypy = "^0.931"
flake8 = "^4.0.1"
black = "^22.1.0"
types-requests = "^2.27.11"

[tool.poetry.group.dev.dependencies]
flake8 = "^6.0.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
